SystemUI: Allow overlaying max notification icons
* I believe there are devices in this world that can fit
  more than 4 notification icons.

Change-Id: I8f01b4e0385b35f4ed93aab2619839e5b40ee0c7

--- a/packages/SystemUI/res/values/cr_config.xml
+++ b/packages/SystemUI/res/values/cr_config.xml
@@ -27,4 +27,8 @@
     -->
     <integer name="hardware_ui_align">53</integer>
 
+    <!-- Max visible notification icons -->
+    <integer name="config_maxVisibleNotificationIcons">4</integer>
+    <integer name="config_maxVisibleNotificationIconsWhenDark">5</integer>
+
 </resources>
