Add Custom Spidey Analog Clock
thanks to ishubhamsingh
Thanks to ROGERdotT for thumbnail.

Change-Id: Id206fd495eae195a5b1edfbbef88787248823385

--- a/packages/SystemUI/res/values/cr_strings.xml
+++ b/packages/SystemUI/res/values/cr_strings.xml
@@ -145,4 +145,7 @@
     <string name="screenrecord_stopdot_label">Show stop dot</string>
     <string name="screenrecord_low_quality_label">Low quality</string>
 
+    <!-- Spidey Analog clock -->
+    <string name="clock_title_spidey" translatable="false">Spidey</string>
+
 </resources>
